--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,21 @@
     "python.pythonPath": "/Users/jarryshaw/.local/share/virtualenvs/FTProxy-8yoelX7l/bin/python",
     "cSpell.words": [
         "NFQUEUE",
+        "dstip",
+        "dstport",
+        "fileng",
+        "frameno",
         "ictor",
+        "ipsuite",
+        "lilendian",
         "proto",
-        "pypacker"
+        "protochain",
+        "pypacker",
+        "srcip",
+        "srcport",
+        "usec",
+        "vbytes",
+        "verbit"
     ],
-    "python.formatting.autopep8Path": "/Users/jarryshaw/.local/share/virtualenvs/FTProxy-8yoelX7l/bin/autopep8",
-    "python.linting.pep8Path": "/Users/jarryshaw/.local/share/virtualenvs/FTProxy-8yoelX7l/bin/pep8",
     "python.linting.pylintEnabled": true
 }
