--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "dstport",
         "fileng",
         "frameno",
+        "ftcap",
         "ictor",
         "ipsuite",
         "lilendian",
