--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,28 @@
 {
     "python.pythonPath": "/Users/jarryshaw/.local/share/virtualenvs/FTProxy-8yoelX7l/bin/python",
     "cSpell.words": [
+        "INET",
+        "IPPROTO",
         "NFQUEUE",
+        "REUSEADDR",
+        "Serv",
+        "clifd",
         "dstip",
         "dstport",
         "fileng",
         "frameno",
         "ftcap",
+        "gaierror",
+        "herror",
         "ictor",
         "ipsuite",
         "lilendian",
+        "ntoa",
         "proto",
         "protochain",
         "pypacker",
+        "readfd",
+        "servfd",
         "srcip",
         "srcport",
         "usec",
