--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 pypcapkit = "*"
+wxPython = "*"
 
 [dev-packages]
 ipython = "*"
@@ -12,7 +13,7 @@ rope = "*"
 "autopep8" = "*"
 pylint = "*"
 pycodestyle = "*"
-isort = {extras = ["pipfile", "requirements"], version = "*"}
+isort = {extras = ["pipfile", "requirements"],version = "*"}
 
 [requires]
 python_version = "3.7"
