--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 sample/
 record/
 *.ftcap
+Pipfile.lock
 
 # Created by https://www.gitignore.io/api/python,pycharm+all,visualstudiocode,macos,windows,linux,c
 # Edit at https://www.gitignore.io/?templates=python,pycharm+all,visualstudiocode,macos,windows,linux,c
