--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04"
+verify_ssl = true
+name = "wxPython"
+
 [packages]
 pypcapkit = "*"
 wxPython = "*"
